--- a/views/produkter.slim
+++ b/views/produkter.slim
@@ -5,17 +5,9 @@ nav
     .nav-wrapper
         ul
             li
-                .produkt1    
-                    - show_products.each do |e|
+                .produkt1
+                    - result.each do |e|
                         a href="/produkter/Stone-Island" = e["Kategori"]
-            li
-                .produkt2
-                    - show_products.each do |e|
-                        a href="/produkter/Givenchy" = e["Kategori"]
-            li
-                .produkt3
-                    - show_products.each do |e|
-                        a href="/produkter/moncler" = e["Kategori"]
             li
                 .login 
                     a href="/login" Login
