--- a/views/givenchy.slim
+++ b/views/givenchy.slim
@@ -1,9 +1,9 @@
 .container
     h1 Givenchy
     .produkt1    
-        - product1.each do |e|
+        - result[:product1].each do |e|
             h4 = e["Produkt_Namn"]
-            p = price
+            p = result[:price]
             form action="/produkter/Givenchy" method="POST"
                 button value="#{e["Id"]}" name="buy" Köp
             
